--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"description": "Server Testing Project",
 	"main": "server.js",
 	"scripts": {
-		"test": "jest --watch --verbose"
+		"server": "nodemon index.js",
+		"test": "jest --watch --verbose",
+		"start": "node index.js"
 	},
 	"jest": {
 		"testEnvironment": "node"
