--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
 		"supertest": "^3.3.0"
 	},
 	"dependencies": {
-		"express": "^4.16.4"
+		"express": "^4.16.4",
+		"init": "^0.1.2",
+		"knex": "^0.18.0"
 	}
 }
