--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	"dependencies": {
 		"express": "^4.16.4",
 		"init": "^0.1.2",
-		"knex": "^0.18.0"
+		"knex": "^0.18.0",
+		"sqlite3": "^4.0.9"
 	}
 }
